--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,14 @@
 <div class="container">
-    <div class="jumbotron">
+    <div class="jumbotron" id="start">
         <h1>Welcome to Mastermind!</h1>
         <button type="button" class="btn btn-primary">START</button>
         <button type="button" class="btn btn-secondary">RULES</button>
         <button type="button" class="btn btn-light">HISTORY</button>
+    </div>
+    <div class="jumbotron" id="in-game">
+        <h1>Mastermind</h1>
+        <button type="button" class="btn btn-primary">START</button>
+        <button type="button" class="btn btn-secondary">RULES</button>
     </div>
     <div class="main-container">
 
