Import routes and give the server access to them.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,6 +11,145 @@
         <button type="button" class="btn btn-secondary">RULES</button>
     </div>
     <div class="main-container">
+        <div id="guesses">
+            <div class="code row">
+                <div class="secret socket">?</div>
+                <div class="secret socket">?</div>
+                <div class="secret socket">?</div>
+                <div class="secret socket">?</div>
+            </div>
+            <div class="guess">
+                <div class="socket"></div>
+                <div class="socket"></div>
+                <div class="socket"></div>
+                <div class="socket"></div>
+            </div>
+            <div class="guess">
+                <div class="socket"></div>
+                <div class="socket"></div>
+                <div class="socket"></div>
+                <div class="socket"></div>
+            </div>
+            <div class="guess">
+                <div class="socket"></div>
+                <div class="socket"></div>
+                <div class="socket"></div>
+                <div class="socket"></div>
+            </div>
+            <div class="guess">
+                <div class="socket"></div>
+                <div class="socket"></div>
+                <div class="socket"></div>
+                <div class="socket"></div>
+            </div>
+            <div class="guess">
+                <div class="socket"></div>
+                <div class="socket"></div>
+                <div class="socket"></div>
+                <div class="socket"></div>
+            </div>
+            <div class="guess">
+                <div class="socket"></div>
+                <div class="socket"></div>
+                <div class="socket"></div>
+                <div class="socket"></div>
+            </div>
+            <div class="guess">
+                <div class="socket"></div>
+                <div class="socket"></div>
+                <div class="socket"></div>
+                <div class="socket"></div>
+            </div>
+            <div class="guess">
+                <div class="socket"></div>
+                <div class="socket"></div>
+                <div class="socket"></div>
+                <div class="socket"></div>
+            </div>
+        </div>
 
+        <div id="hints">
+            <div class="hint">
+                <div class="row">
+                    <div class="js-hint-socket socket"></div>
+                    <div class="js-hint-socket socket"></div>
+                </div>
+                <div class="row">
+                    <div class="js-hint-socket socket"></div>
+                    <div class="js-hint-socket socket"></div>
+                </div>
+            </div>
+            <div class="hint">
+                <div class="row">
+                    <div class="js-hint-socket socket"></div>
+                    <div class="js-hint-socket socket"></div>
+                </div>
+                <div class="row">
+                    <div class="js-hint-socket socket"></div>
+                    <div class="js-hint-socket socket"></div>
+                </div>
+            </div>
+            <div class="hint">
+                <div class="row">
+                    <div class="js-hint-socket socket"></div>
+                    <div class="js-hint-socket socket"></div>
+                </div>
+                <div class="row">
+                    <div class="js-hint-socket socket"></div>
+                    <div class="js-hint-socket socket"></div>
+                </div>
+            </div>
+            <div class="hint">
+                <div class="row">
+                    <div class="js-hint-socket socket"></div>
+                    <div class="js-hint-socket socket"></div>
+                </div>
+                <div class="row">
+                    <div class="js-hint-socket socket"></div>
+                    <div class="js-hint-socket socket"></div>
+                </div>
+            </div>
+            <div class="hint">
+                <div class="row">
+                    <div class="js-hint-socket socket"></div>
+                    <div class="js-hint-socket socket"></div>
+                </div>
+                <div class="row">
+                    <div class="js-hint-socket socket"></div>
+                    <div class="js-hint-socket socket"></div>
+                </div>
+            </div>
+            <div class="hint">
+                <div class="row">
+                    <div class="js-hint-socket socket"></div>
+                    <div class="js-hint-socket socket"></div>
+                </div>
+                <div class="row">
+                    <div class="js-hint-socket socket"></div>
+                    <div class="js-hint-socket socket"></div>
+                </div>
+            </div>
+            <div class="hint">
+                <div class="row">
+                    <div class="js-hint-socket socket"></div>
+                    <div class="js-hint-socket socket"></div>
+                </div>
+                <div class="row">
+                    <div class="js-hint-socket socket"></div>
+                    <div class="js-hint-socket socket"></div>
+                </div>
+            </div>
+            <div class="hint">
+                <div class="row">
+                    <div class="js-hint-socket socket"></div>
+                    <div class="js-hint-socket socket"></div>
+                </div>
+                <div class="row">
+                    <div class="js-hint-socket socket"></div>
+                    <div class="js-hint-socket socket"></div>
+                </div>
+            </div>
+        </div>
     </div>
+</div>
 </div>
