Display, show hide start and in game

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
-    <div class="jumbotron" id="start">
+    <div class="jumbotron" id="start-game">
         <h1>Welcome to Mastermind!</h1>
-        <button type="button" class="btn btn-primary">START</button>
+        <button type="button" class="btn btn-primary" id='btn-start'>START</button>
         <button type="button" class="btn btn-secondary">RULES</button>
         <button type="button" class="btn btn-light">HISTORY</button>
     </div>
@@ -11,145 +11,6 @@
         <button type="button" class="btn btn-secondary">RULES</button>
     </div>
     <div class="main-container">
-        <div id="guesses">
-            <div class="code row">
-                <div class="secret socket">?</div>
-                <div class="secret socket">?</div>
-                <div class="secret socket">?</div>
-                <div class="secret socket">?</div>
-            </div>
-            <div class="guess">
-                <div class="socket"></div>
-                <div class="socket"></div>
-                <div class="socket"></div>
-                <div class="socket"></div>
-            </div>
-            <div class="guess">
-                <div class="socket"></div>
-                <div class="socket"></div>
-                <div class="socket"></div>
-                <div class="socket"></div>
-            </div>
-            <div class="guess">
-                <div class="socket"></div>
-                <div class="socket"></div>
-                <div class="socket"></div>
-                <div class="socket"></div>
-            </div>
-            <div class="guess">
-                <div class="socket"></div>
-                <div class="socket"></div>
-                <div class="socket"></div>
-                <div class="socket"></div>
-            </div>
-            <div class="guess">
-                <div class="socket"></div>
-                <div class="socket"></div>
-                <div class="socket"></div>
-                <div class="socket"></div>
-            </div>
-            <div class="guess">
-                <div class="socket"></div>
-                <div class="socket"></div>
-                <div class="socket"></div>
-                <div class="socket"></div>
-            </div>
-            <div class="guess">
-                <div class="socket"></div>
-                <div class="socket"></div>
-                <div class="socket"></div>
-                <div class="socket"></div>
-            </div>
-            <div class="guess">
-                <div class="socket"></div>
-                <div class="socket"></div>
-                <div class="socket"></div>
-                <div class="socket"></div>
-            </div>
-        </div>
-
-        <div id="hints">
-            <div class="hint">
-                <div class="row">
-                    <div class="js-hint-socket socket"></div>
-                    <div class="js-hint-socket socket"></div>
-                </div>
-                <div class="row">
-                    <div class="js-hint-socket socket"></div>
-                    <div class="js-hint-socket socket"></div>
-                </div>
-            </div>
-            <div class="hint">
-                <div class="row">
-                    <div class="js-hint-socket socket"></div>
-                    <div class="js-hint-socket socket"></div>
-                </div>
-                <div class="row">
-                    <div class="js-hint-socket socket"></div>
-                    <div class="js-hint-socket socket"></div>
-                </div>
-            </div>
-            <div class="hint">
-                <div class="row">
-                    <div class="js-hint-socket socket"></div>
-                    <div class="js-hint-socket socket"></div>
-                </div>
-                <div class="row">
-                    <div class="js-hint-socket socket"></div>
-                    <div class="js-hint-socket socket"></div>
-                </div>
-            </div>
-            <div class="hint">
-                <div class="row">
-                    <div class="js-hint-socket socket"></div>
-                    <div class="js-hint-socket socket"></div>
-                </div>
-                <div class="row">
-                    <div class="js-hint-socket socket"></div>
-                    <div class="js-hint-socket socket"></div>
-                </div>
-            </div>
-            <div class="hint">
-                <div class="row">
-                    <div class="js-hint-socket socket"></div>
-                    <div class="js-hint-socket socket"></div>
-                </div>
-                <div class="row">
-                    <div class="js-hint-socket socket"></div>
-                    <div class="js-hint-socket socket"></div>
-                </div>
-            </div>
-            <div class="hint">
-                <div class="row">
-                    <div class="js-hint-socket socket"></div>
-                    <div class="js-hint-socket socket"></div>
-                </div>
-                <div class="row">
-                    <div class="js-hint-socket socket"></div>
-                    <div class="js-hint-socket socket"></div>
-                </div>
-            </div>
-            <div class="hint">
-                <div class="row">
-                    <div class="js-hint-socket socket"></div>
-                    <div class="js-hint-socket socket"></div>
-                </div>
-                <div class="row">
-                    <div class="js-hint-socket socket"></div>
-                    <div class="js-hint-socket socket"></div>
-                </div>
-            </div>
-            <div class="hint">
-                <div class="row">
-                    <div class="js-hint-socket socket"></div>
-                    <div class="js-hint-socket socket"></div>
-                </div>
-                <div class="row">
-                    <div class="js-hint-socket socket"></div>
-                    <div class="js-hint-socket socket"></div>
-                </div>
-            </div>
-        </div>
+        <p>stuff here</p>
     </div>
-</div>
 </div>
