--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,7 +14,7 @@
     <div id="rules-text">
         <ul>
             <li>Objective Crack the Code!<br>
-            <bold>Your objective is to use the 6 cors provided with the hints provided at the end of each round to
+                <bold>Your objective is to use the 6 colors provided with the hints provided at the end of each round to
                     crack the code.</bold><br>
                 <small>The Code is automatically generated at the begining of the game. It is revealed at the end of the
                     game.</small>
@@ -25,18 +25,131 @@
             <li>
                 2. Each row represents a round. At the end of each round you will be given hints.<br>
                 <small>Hints: White represents - correct position and color. Gray represents - correct color but in the
-                    wrong position. Black represents - a color not in the Code.</small>
+                    wrong position. Black represents - a color not in the Code.<br>
+                    You have 8 rounds to crack the code.</small>
             </li>
             <li>
                 3. Use the hints to direct your guess for the next round.
             </li>
             <li>
-                4. Good luck! If you are unable to crack the code the game resets and you can play again.
+                4. Good luck! If you are unable to crack the code in 8 rounds; the game resets and you can play again.
                 <small>The code will be regenerated, so you will not be cracking the same code.</small>
             </li>
         </ul>
     </div>
     <div class="main-container">
+        <div id="game">
+            <div id="code">
+                <div class="code-receptor"></div>
+                <div class="code-receptor"></div>
+                <div class="code-receptor"></div>
+                <div class="code-receptor"></div>
+            </div>
+            <div id="guesses">
+                <div id="guess-row">
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                </div>
+                <div id="guess-row">
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                </div>
+                <div id="guess-row">
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                </div>
+                <div id="guess-row">
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                </div>
+                <div id="guess-row">
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                </div>
+                <div id="guess-row">
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                </div>
+                <div id="guess-row">
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                </div>
+                <div id="guess-row">
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                </div>
+                <div id="guess-btns">
+                    {{!-- 6 color buttons --}}
 
+                </div>
+            </div>
+            <div id='hints'>
+                <div id="hint-fill">
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                </div>
+                <div id="hint-fill">
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                </div>
+                <div id="hint-fill">
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                </div>
+                <div id="hint-fill">
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                </div>
+                <div id="hint-fill">
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                </div>
+                <div id="hint-fill">
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                </div>
+                <div id="hint-fill">
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                </div>
+                <div id="hint-fill">
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                    <div class="hint-receptor"></div>
+                </div>
+            </div>
+
+        </div>
     </div>
 </div>
