--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -96,7 +96,12 @@
                 </div>
                 <div id="guess-btns">
                     {{!-- 6 color buttons --}}
-
+                    <button class='button' id='red' value='1'></button>
+                    <button class='button' id='blue' value='2'></button>
+                    <button class='button' id='green' value='3'></button>
+                    <button class='button' id='orange' value='4'></button>
+                    <button class='button' id='pink' value='5'></button>
+                    <button class='button' id='yellow' value='6'></button>
                 </div>
             </div>
             <div id='hints'>
