changed guess-row from id to class to get index

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -46,49 +46,49 @@
                 <div class="code-receptor"></div>
             </div>
             <div id="guesses">
-                <div id="guess-row">
+                <div class="guess-row">
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                 </div>
-                <div id="guess-row">
+                <div class="guess-row">
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                 </div>
-                <div id="guess-row">
+                <div class="guess-row">
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                 </div>
-                <div id="guess-row">
+                <div class="guess-row">
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                 </div>
-                <div id="guess-row">
+                <div class="guess-row">
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                 </div>
-                <div id="guess-row">
+                <div class="guess-row">
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                 </div>
-                <div id="guess-row">
+                <div class="guess-row">this is second
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                 </div>
-                <div id="guess-row">
+                <div class="guess-row">this is first
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                     <div class="receptor"></div>
