--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -94,13 +94,13 @@
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                 </div>
-                <div id="guess-btns">
-                    <button class='button' id='red' value='1'></button>
-                    <button class='button' id='blue' value='2'></button>
-                    <button class='button' id='green' value='3'></button>
-                    <button class='button' id='orange' value='4'></button>
-                    <button class='button' id='pink' value='5'></button>
-                    <button class='button' id='yellow' value='6'></button>
+                <div class="btn-group" role="group" id="guess-btns">
+                    <button class='button' type="button" id='red' value='1'> </button>
+                    <button class='button' type="button" id='blue' value='2'> </button>
+                    <button class='button' type="button" id='green' value='3'> </button>
+                    <button class='button' type="button" id='orange' value='4'> </button>
+                    <button class='button' type="button" id='pink' value='5'> </button>
+                    <button class='button' type="button" id='yellow' value='6'> </button>
                 </div>
             </div>
             <div id='hints'>
