--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -39,18 +39,12 @@
     </div>
     <div class="main-container">
         <div id="game">
-            <div id="code">
-                <div class="code-receptor"></div>
-                <div class="code-receptor"></div>
-                <div class="code-receptor"></div>
-                <div class="code-receptor"></div>
-            </div>
             <div id="guesses">
-                <div class="guess-row">
-                    <div class="receptor"></div>
-                    <div class="receptor"></div>
-                    <div class="receptor"></div>
-                    <div class="receptor"></div>
+                <div id="code">
+                    <div class="code-receptor"></div>
+                    <div class="code-receptor"></div>
+                    <div class="code-receptor"></div>
+                    <div class="code-receptor"></div>
                 </div>
                 <div class="guess-row">
                     <div class="receptor"></div>
@@ -82,77 +76,77 @@
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                 </div>
-                <div class="guess-row">this is second
+                <div class="guess-row">
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                 </div>
-                <div class="guess-row">this is first
+                <div class="guess-row">
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                     <div class="receptor"></div>
                 </div>
-                <div class="btn-group" role="group" id="guess-btns">
-                    <button class='button' type="button" id='red' value='1'></button>
-                    <button class='button' type="button" id='blue' value='2'></button>
-                    <button class='button' type="button" id='green' value='3'></button>
-                    <button class='button' type="button" id='orange' value='4'></button>
-                    <button class='button' type="button" id='pink' value='5'></button>
-                    <button class='button' type="button" id='yellow' value='6'></button>
+                <div class="guess-row">
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
+                    <div class="receptor"></div>
                 </div>
             </div>
             <div id='hints'>
-                <div id="hint-fill">
+                <div class="hint-fill">
                     <div class="hint-receptor"></div>
                     <div class="hint-receptor"></div>
                     <div class="hint-receptor"></div>
                     <div class="hint-receptor"></div>
                 </div>
-                <div id="hint-fill">
+                <div class="hint-fill">
                     <div class="hint-receptor"></div>
                     <div class="hint-receptor"></div>
                     <div class="hint-receptor"></div>
                     <div class="hint-receptor"></div>
                 </div>
-                <div id="hint-fill">
+                <div class="hint-fill">
                     <div class="hint-receptor"></div>
                     <div class="hint-receptor"></div>
                     <div class="hint-receptor"></div>
                     <div class="hint-receptor"></div>
                 </div>
-                <div id="hint-fill">
+                <div class="hint-fill">
                     <div class="hint-receptor"></div>
                     <div class="hint-receptor"></div>
                     <div class="hint-receptor"></div>
                     <div class="hint-receptor"></div>
                 </div>
-                <div id="hint-fill">
+                <div class="hint-fill">
                     <div class="hint-receptor"></div>
                     <div class="hint-receptor"></div>
                     <div class="hint-receptor"></div>
                     <div class="hint-receptor"></div>
                 </div>
-                <div id="hint-fill">
+                <div class="hint-fill">
                     <div class="hint-receptor"></div>
                     <div class="hint-receptor"></div>
                     <div class="hint-receptor"></div>
                     <div class="hint-receptor"></div>
                 </div>
-                <div id="hint-fill">
-                    <div class="hint-receptor"></div>
-                    <div class="hint-receptor"></div>
-                    <div class="hint-receptor"></div>
-                    <div class="hint-receptor"></div>
-                </div>
-                <div id="hint-fill">
+                <div class="hint-fill">
                     <div class="hint-receptor"></div>
                     <div class="hint-receptor"></div>
                     <div class="hint-receptor"></div>
                     <div class="hint-receptor"></div>
                 </div>
             </div>
+        </div>
+        <div class="btn-group" role="group" id="guess-btns">
+            <button class='button' type="button" id='red' value='1'></button>
+            <button class='button' type="button" id='blue' value='2'></button>
+            <button class='button' type="button" id='green' value='3'></button>
+            <button class='button' type="button" id='orange' value='4'></button>
+            <button class='button' type="button" id='pink' value='5'></button>
+            <button class='button' type="button" id='yellow' value='6'></button>
         </div>
     </div>
 </div>
