--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,22 +14,22 @@
     <div id="rules-text">
         <ul>
             <li>Objective Crack the Code!<br>
-                <bold>Your objective is to use the 6 colors provided with the hints provided at the end of each round to
+                <bold>Your objective is to use the 6 colors along with the hints provided at the end of each round to
                     crack the code.</bold><br>
                 <small>The Code is automatically generated at the begining of the game. It is revealed at the end of the
-                    game.</small>
+                    game or if you win!</small>
             </li>
             <li>
                 1. Select 4 colors at the bottom of the board.
             </li>
             <li>
                 2. Each row represents a round. At the end of each round you will be given hints.<br>
-                <small>Hints: White represents - correct position and color. Gray represents - correct color but in the
-                    wrong position. Black represents - a color not in the Code.<br>
+                <small>Hints: Black represents - correct position and color. Gray represents - correct color but in the
+                    wrong position. White represents - a color not in the Code.<br>
                     You have 8 rounds to crack the code.</small>
             </li>
             <li>
-                3. Use the hints to direct your guess for the next round.
+                3. Use the hints to direct your guesses for the next round.
             </li>
             <li>
                 4. Good luck! If you are unable to crack the code in 8 rounds; the game resets and you can play again.
@@ -38,8 +38,8 @@
         </ul>
     </div>
     <div class="main-container">
-        <div id="game">
-            <div id="guesses">
+        {{!-- <div id="game"> --}}
+            <div class="guesses">
                 <div id="code">
                     <div class="code-receptor"></div>
                     <div class="code-receptor"></div>
@@ -95,7 +95,7 @@
                     <div class="receptor"></div>
                 </div>
             </div>
-            <div id='hints'>
+            <div class='hints'>
                 <div class="hint-fill">
                     <div class="hint-receptor"></div>
                     <div class="hint-receptor"></div>
@@ -139,7 +139,7 @@
                     <div class="hint-receptor"></div>
                 </div>
             </div>
-        </div>
+        {{!-- </div> --}}
         <div class="btn-group" role="group" id="guess-btns">
             <button class='button' type="button" id='red' value='1'></button>
             <button class='button' type="button" id='blue' value='2'></button>
